# box_spawner

./: CMakeLists.txt  README.md  package.xml
include/: notEmpty.txt
launch/: spawner.launch
models/: box1.urdf
